[gd_scene load_steps=27 format=3 uid="uid://tce33nf1swbf"]

[ext_resource type="PackedScene" uid="uid://d37woxfskc4ww" path="res://characters/player/player_2.glb" id="1_x3sgo"]
[ext_resource type="Script" uid="uid://sjsr2mvghkuy" path="res://scripts/PlayerCharacter.gd" id="2_bx55h"]
[ext_resource type="PackedScene" uid="uid://bd7topi2u5yac" path="res://virtual_joystick.tscn" id="2_ryqyf"]
[ext_resource type="Script" uid="uid://q2u4o1ftij3r" path="res://VirtualJoystick.gd" id="3_1hlws"]
[ext_resource type="Material" uid="uid://dx1l1v8tasttn" path="res://characters/player/player_2_mat.tres" id="3_4ashp"]
[ext_resource type="PackedScene" uid="uid://cgeuawjng32fk" path="res://Action_buttons.tscn" id="4_0jhxp"]
[ext_resource type="Script" uid="uid://b4l4jlvtl6mgw" path="res://scripts/UIManager.gd" id="4_bx55h"]
[ext_resource type="Script" uid="uid://c485euhn1uebk" path="res://scripts/InputHandler.gd" id="8_di0nh"]
[ext_resource type="Script" uid="uid://mo14t68wccod" path="res://scripts/TargetingSystem.gd" id="9_afc50"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_6iqoo"]
radius = 0.360606
height = 2.01987

[sub_resource type="SphereShape3D" id="SphereShape3D_jaoer"]
radius = 0.879149

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_x3sgo"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ryqyf"]
animation = &"StrafeForward"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1hlws"]
animation = &"StrafeForward"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_idpv6"]
blend_point_0/node = SubResource("AnimationNodeAnimation_x3sgo")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("AnimationNodeAnimation_ryqyf")
blend_point_1/pos = 1.0
blend_point_2/node = SubResource("AnimationNodeAnimation_1hlws")
blend_point_2/pos = -1.0
snap = 1.0

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_m3swb"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4ashp"]
animation = &"StrafeBackward"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_j16x2"]
animation = &"StrafeForward"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_uc5xm"]
animation = &"StrafeRight"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_f08cw"]
animation = &"StrafeLeft"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_5dc8e"]
blend_point_0/node = SubResource("AnimationNodeAnimation_m3swb")
blend_point_0/pos = Vector2(0, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_4ashp")
blend_point_1/pos = Vector2(0, 1)
blend_point_2/node = SubResource("AnimationNodeAnimation_j16x2")
blend_point_2/pos = Vector2(0, -1)
blend_point_3/node = SubResource("AnimationNodeAnimation_uc5xm")
blend_point_3/pos = Vector2(1, 0)
blend_point_4/node = SubResource("AnimationNodeAnimation_f08cw")
blend_point_4/pos = Vector2(-1, 0)
snap = Vector2(0.5, 0.5)

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_icpky"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_58jvb"]
xfade_time = 0.1
switch_mode = 1
advance_mode = 2
advance_expression = "strafing"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5dc8e"]
xfade_time = 0.2
switch_mode = 1
advance_mode = 2
advance_expression = "!strafing"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_at6ig"]
states/Normal/node = SubResource("AnimationNodeBlendSpace1D_idpv6")
states/Normal/position = Vector2(345, 100)
states/Start/position = Vector2(201, 100)
states/Strafe/node = SubResource("AnimationNodeBlendSpace2D_5dc8e")
states/Strafe/position = Vector2(526, 102)
transitions = ["Start", "Normal", SubResource("AnimationNodeStateMachineTransition_icpky"), "Normal", "Strafe", SubResource("AnimationNodeStateMachineTransition_58jvb"), "Strafe", "Normal", SubResource("AnimationNodeStateMachineTransition_5dc8e")]
graph_offset = Vector2(34.298, -5)

[sub_resource type="LabelSettings" id="LabelSettings_y7egp"]
font_size = 25

[node name="PlayerCharacter" groups=["player"] instance=ExtResource("1_x3sgo")]
collision_mask = 8
script = ExtResource("2_bx55h")
fire_rate = 0.15

[node name="Armature" parent="." index="0"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="GeneralSkeleton" parent="Armature" index="0"]
bones/0/position = Vector3(0.00308913, 0.925394, -0.00317878)
bones/0/rotation = Quaternion(-0.00654028, -0.460504, 0.0136886, 0.887528)
bones/1/rotation = Quaternion(0.0616048, 0.00709978, 0.00503255, 0.998063)
bones/2/rotation = Quaternion(0.0515112, 0.0134383, 0.00891918, 0.998542)
bones/3/rotation = Quaternion(0.0937133, 0.0157714, -0.00545852, 0.995459)
bones/4/rotation = Quaternion(0.0182202, 0.0498426, -0.00627529, 0.998571)
bones/5/rotation = Quaternion(-0.0312567, 0.303036, -0.0602518, 0.950559)
bones/6/position = Vector3(4.09782e-08, 0.3218, 0.0596998)
bones/7/rotation = Quaternion(0.321287, 0.581313, 0.61936, -0.41862)
bones/8/rotation = Quaternion(-0.167976, 0.970719, 0.0238075, 0.170064)
bones/9/rotation = Quaternion(0.361009, -0.841704, 0.321822, 0.240078)
bones/10/rotation = Quaternion(-0.496122, 0.217615, -0.399377, 0.739598)
bones/11/rotation = Quaternion(-0.0227443, 0.854676, 0.430121, 0.28984)
bones/12/rotation = Quaternion(0.244333, 0.107009, -0.180817, 0.946655)
bones/12/scale = Vector3(1.00006, 0.999965, 0.999978)
bones/13/rotation = Quaternion(0.115382, 0.0601038, -0.255941, 0.957898)
bones/14/position = Vector3(-0.0213906, 0.00444005, -0.0119686)
bones/14/rotation = Quaternion(0.146405, -0.525283, 0.629302, 0.553735)
bones/14/scale = Vector3(1.00054, 1.00017, 1.00051)
bones/15/rotation = Quaternion(0.143019, 0.030911, 0.150031, 0.977794)
bones/16/rotation = Quaternion(0.0397738, 0.0784524, 0.0151744, 0.996009)
bones/17/rotation = Quaternion(0.244643, 0.0874736, 0.0898836, 0.961467)
bones/18/position = Vector3(-0.0131555, -0.00858769, 0.0417328)
bones/18/rotation = Quaternion(0.587343, 0.267902, 0.440984, 0.62353)
bones/19/rotation = Quaternion(0.325211, -0.560944, -0.577389, -0.496187)
bones/20/rotation = Quaternion(-0.330015, 0.934785, 0.112719, -0.0675443)
bones/21/rotation = Quaternion(0.2098, 0.904009, -0.265818, 0.260946)
bones/22/rotation = Quaternion(-0.220595, -0.276016, 0.409557, 0.84108)
bones/23/rotation = Quaternion(-0.311442, -0.677566, -0.284162, 0.602628)
bones/24/rotation = Quaternion(0.110108, -0.0691983, 0.100906, 0.98636)
bones/24/scale = Vector3(1.00008, 0.999948, 0.999973)
bones/25/rotation = Quaternion(0.0482329, -0.128293, -0.0384034, 0.989818)
bones/25/scale = Vector3(1.00001, 0.999992, 0.999997)
bones/26/position = Vector3(0.0235269, 0.00725591, -0.0133449)
bones/26/rotation = Quaternion(0.149936, 0.545737, -0.58755, 0.578339)
bones/26/scale = Vector3(1.00056, 1.00018, 1.00048)
bones/27/rotation = Quaternion(-0.194645, 0.248056, -0.00227691, 0.948987)
bones/28/rotation = Quaternion(0.0658071, -0.35864, -0.0420131, 0.930205)
bones/29/rotation = Quaternion(0.265775, 0.111801, -0.109274, 0.951275)
bones/30/position = Vector3(0.0112786, -0.00673072, 0.0390179)
bones/30/rotation = Quaternion(0.586439, -0.274766, -0.43429, 0.626087)
bones/31/rotation = Quaternion(0.246157, 0.228225, 0.93288, -0.130596)
bones/31/scale = Vector3(0.999999, 0.999994, 0.999986)
bones/32/rotation = Quaternion(0.00173531, 0.971126, -0.23789, 0.0178802)
bones/33/rotation = Quaternion(-0.0460969, 0.725267, -0.684667, 0.0556237)
bones/34/rotation = Quaternion(-0.000870749, 0.999997, 0.00199255, -0.00124376)
bones/36/rotation = Quaternion(-0.217533, 0.205513, 0.937655, 0.17677)
bones/36/scale = Vector3(0.999999, 0.999993, 0.999979)
bones/37/rotation = Quaternion(-0.00121196, 0.959037, -0.282483, -0.0211908)
bones/38/rotation = Quaternion(0.0865882, 0.670794, -0.73596, -0.0300192)
bones/39/rotation = Quaternion(-0.0187872, 0.999079, -0.0255722, -0.0288691)

[node name="tripo_node_ae278d44" parent="Armature/GeneralSkeleton" index="0"]
material_override = ExtResource("3_4ashp")

[node name="CharacterCollision" type="CollisionShape3D" parent="." index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.01019, 0)
shape = SubResource("CapsuleShape3D_6iqoo")

[node name="InteractionArea" type="Area3D" parent="." index="3"]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractionArea" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.954758, 0)
shape = SubResource("SphereShape3D_jaoer")
debug_color = Color(0.80916, 0.410819, 0.101602, 0.42)

[node name="AnimationTree" type="AnimationTree" parent="." index="4"]
tree_root = SubResource("AnimationNodeStateMachine_at6ig")
advance_expression_base_node = NodePath("..")
anim_player = NodePath("../AnimationPlayer")
parameters/Normal/blend_position = 0.0
parameters/Strafe/blend_position = Vector2(0.0794979, -0.139013)

[node name="ProjectileLocation" type="Marker3D" parent="." index="5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.160774, 1.11567, -0.956388)

[node name="PlayerHUD" type="CanvasLayer" parent="." index="6"]
follow_viewport_enabled = true
script = ExtResource("4_bx55h")

[node name="Healthbar" type="ProgressBar" parent="PlayerHUD" index="0"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -195.0
offset_top = -74.87
offset_right = 195.0
offset_bottom = -47.87
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(195, 13)
size_flags_horizontal = 4
size_flags_vertical = 4
metadata/_edit_use_anchors_ = true

[node name="HealthLabel" type="Label" parent="PlayerHUD" index="1"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -56.0
offset_top = -135.96
offset_right = 56.0
offset_bottom = -86.96
grow_horizontal = 2
grow_vertical = 0
text = "Health"
label_settings = SubResource("LabelSettings_y7egp")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="ScoreLabel" type="Label" parent="PlayerHUD" index="2"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -195.0
offset_top = 20.0
offset_right = -102.0
offset_bottom = 69.0
grow_horizontal = 0
text = "Score"
label_settings = SubResource("LabelSettings_y7egp")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="ScoreValue" type="Label" parent="PlayerHUD" index="3"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -78.0
offset_top = 20.0
offset_right = -26.0
offset_bottom = 43.0
grow_horizontal = 0
text = "00"
label_settings = SubResource("LabelSettings_y7egp")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="VirtualJoystick" parent="PlayerHUD" index="4" instance=ExtResource("2_ryqyf")]
offset_left = -471.0
offset_top = 200.0
offset_right = -471.0
offset_bottom = 200.0
pivot_offset = Vector2(0, 0)
script = ExtResource("3_1hlws")
metadata/_edit_use_anchors_ = true

[node name="ActionsButtons" parent="PlayerHUD" index="5" instance=ExtResource("4_0jhxp")]
offset_left = 509.0
offset_top = 236.0
offset_right = 509.0
offset_bottom = 236.0
scale = Vector2(0.785, 0.785)

[node name="InputHandler" type="Node" parent="." index="7"]
script = ExtResource("8_di0nh")

[node name="TargetingSystem" type="Node" parent="." index="8"]
script = ExtResource("9_afc50")
